--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
         <footer class="footer">
             <p>Project Timeline: 6-7 weeks | Target Platforms: Android & iOS</p>
             <p>Document Version: 1.0 | Last Updated: September 24, 2025</p>
-            <p>Contact us: +237 650318856 | email: loopingbinary@gmail.com</p>
+            <p>Contact us: +237 650318856 or +237 674435138  | email: loopingbinary@gmail.com</p>
         </footer>
     </div>
 
